Bumped back to Java 25